[project]
name = "rgfn"
version = "0.1.0"
description = "RGFN: Synthesizable Molecular Generation Using GFlowNets"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch-geometric==2.5.3",
    "torchmetrics==1.2.0",
    "dgl",
    "dgllife==0.3.2",
    "tqdm==4.66.3",
    "wandb>=0.18.0",
    "typing-extensions>=4.10.0",
    "pre-commit==3.5.0",
    "omegaconf==2.3.0",
    "gin-config==0.5.0",
    "more-itertools==10.1.0",
    "pandas==2.1.4",
    "rdkit==2023.9.5",
    "pydantic==2.6.3",
    "pytest==7.4.2",
    "jupyter==1.0.0",
    "papermill==2.4.0",
    "numpy==1.26.4",
    "openpyxl==3.1.4",
    "openbabel-wheel==3.1.1.19",
    "meeko==0.5.1",
    "wurlitzer==3.1.0",
    "xlsxwriter==3.2.0",
    "PyTDC>=1.0.6",
    "einops>=0.8.0",
    "jaxtyping>=0.2.34",
    "torchdata==0.7.1",
    "pyarrow<13.0.0",
    "setuptools<81",
]

[project.optional-dependencies]
cu124 = [
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp311-cp311-linux_x86_64.whl ; python_version == '3.11' and platform_machine == 'x86_64' and platform_system == 'Linux'",
]

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp311-cp311-manylinux1_x86_64.whl" }
